--- a/src/style.css
+++ b/src/style.css
@@ -1209,6 +1209,8 @@ progress::-moz-progress-bar {
     display: block;
     height: 5rem;
     width: 5rem;
+    min-height: 5rem;
+    min-width: 5rem;
     background-color: var(--activeColor);
     border-radius: 50%;
     margin-right: 0.5rem;
