--- a/src/style.css
+++ b/src/style.css
@@ -428,12 +428,12 @@ progress::-moz-progress-bar {
     display: block;
     position: absolute;
     z-index: -1;
-    top: 0.5rem;
+    top: .5rem;
     left: 0;
     width: 100%;
     height: calc(100% - 1rem);
     background-color: var(--backgroundColor);
-    opacity: 0.6;
+    opacity: .6;
     border-top-right-radius: 1.2rem;
     border-top-left-radius: 1.2rem;
   }
@@ -800,7 +800,7 @@ progress::-moz-progress-bar {
   margin: 2rem 0 1rem;
 
   & .projectDetailTitle {
-    margin-left: 0.5rem;
+    margin-left: .5rem;
   }
 
   & header {
@@ -827,6 +827,12 @@ progress::-moz-progress-bar {
   }
 }
 
+.like {
+  background-image: url(assets/img/like_2.svg);
+  background-repeat: no-repeat;
+  width: 4rem;
+}
+
 .protoTypes {
   & .prototypeFase:nth-of-type(2n + 1),
   & .prototypeFase:first-of-type {
@@ -840,7 +846,7 @@ progress::-moz-progress-bar {
 
     &::before,
     &::after {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       left: 0;
@@ -949,7 +955,7 @@ progress::-moz-progress-bar {
   position: absolute;
   top: 1rem;
   right: 1rem;
-  border: solid 0.3rem var(--activeColor);
+  background-image: url(assets/img/nietgoedgekeurd.svg);
   width: 3.5rem;
   height: 3.5rem;
   overflow: hidden;
@@ -1338,6 +1344,9 @@ progress::-moz-progress-bar {
     width: 5rem;
     min-height: 5rem;
     min-width: 5rem;
+    background-image: url(assets/img/upload.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
     background-color: var(--activeColor);
     border-radius: 50%;
     margin-right: .5rem;
@@ -1408,7 +1417,6 @@ progress::-moz-progress-bar {
   }
 }
 
-<<<<<<< HEAD
 .klantType {
   background-image: url(assets/img/krukken.svg);
 }
@@ -1423,8 +1431,6 @@ progress::-moz-progress-bar {
 
 /* JUNK */
 
-=======
->>>>>>> 27a6852806c093b2afacceb08a81be4e0cfba753
 .scrubber {
   position: absolute;
   z-index: 50;
@@ -1684,18 +1690,36 @@ legend {
   & .leeftijdCheckbox {
     width: 8rem;
     height: 8rem;
-    background-color: var(--backgroundColor);
+    background-color: #dad8df;
     border-radius: 50%;
     cursor: pointer;
+    background-position: center center;
+    background-repeat: no-repeat;
   }
 
-  & input[type="checkbox"] {
+  & input[type='checkbox'] {
     opacity: 0;
   }
 
-  & input[type="checkbox"]:checked ~ .leeftijdCheckbox {
+  & input[type='checkbox']:checked ~ .leeftijdCheckbox {
     background-color: var(--activeColor);
   }
+}
+
+.kinderenType {
+  background-image: url(assets/img/kind.svg);
+}
+
+.jongerenType {
+  background-image: url(assets/img/jongere.svg);
+}
+
+.volwassenenType {
+  background-image: url(assets/img/volwassene.svg);
+}
+
+.ouderenType {
+  background-image: url(assets/img/oudere.svg);
 }
 
 /* Mijn projecten */
@@ -2126,4 +2150,8 @@ legend {
 
 .hide {
   display: none;
+}
+
+.strong {
+  font-weight: var(--weight-bold);
 }
