--- a/src/style.css
+++ b/src/style.css
@@ -614,8 +614,10 @@ progress::-moz-progress-bar {
 
   & .contributorsData {
     display: flex;
+    justify-content: center;
     align-items: center;
     padding: 0.5rem;
+    height: 5rem;
 
     & .contributors {
       display: flex;
