--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
-@import './css/reset.css';
-@import './css/vars.css';
+@import "./css/reset.css";
+@import "./css/vars.css";
 
 body {
   display: flex;
@@ -87,7 +87,7 @@ label span {
   display: block;
   font-size: 2rem;
   color: var(--secondColorBgTextColor);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .labelWithCheckbox {
@@ -105,7 +105,7 @@ label span {
     font-size: var(--broodtekst);
   }
 
-  & input[type=checkbox] {
+  & input[type="checkbox"] {
     position: absolute;
     top: 0;
     left: 0;
@@ -114,16 +114,16 @@ label span {
     cursor: pointer;
   }
 
-  & input[type=text] {
+  & input[type="text"] {
     order: -1;
     margin-left: 1rem;
   }
 
-  & input[type=text]:disabled {
-    opacity: .5;
+  & input[type="text"]:disabled {
+    opacity: 0.5;
   }
 
-  & input[type=checkbox]:checked ~ .customCheckBox {
+  & input[type="checkbox"]:checked ~ .customCheckBox {
     background-color: var(--activeColor);
   }
 }
@@ -134,7 +134,7 @@ label span {
   min-width: 2.4rem;
   max-width: 2.4rem;
   height: 2.4rem;
-  border-radius: .2rem;
+  border-radius: 0.2rem;
   margin: 0;
   margin-right: 1rem;
   cursor: pointer;
@@ -167,7 +167,7 @@ nav {
 
   & ul li a::before,
   & ul li button::before {
-    content: '';
+    content: "";
     display: block;
     width: 3.5rem;
     height: 3.5rem;
@@ -288,7 +288,7 @@ footer {
 }
 
 .colorBgTop::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: -4.9rem;
@@ -319,14 +319,14 @@ footer {
 .ghostBtn {
   color: var(--activeColor);
   background: none;
-  border: solid .3rem var(--activeColor);
+  border: solid 0.3rem var(--activeColor);
 }
 
 progress {
   position: relative;
   z-index: 60;
   display: block;
-  height: .4rem;
+  height: 0.4rem;
   width: 100%;
   background-color: var(--backgroundColor);
 }
@@ -381,7 +381,7 @@ progress::-moz-progress-bar {
   & .progressBarHolder {
     position: relative;
     align-self: flex-start;
-    height: .2rem;
+    height: 0.2rem;
     flex: 2;
   }
 
@@ -411,13 +411,13 @@ progress::-moz-progress-bar {
     left: 0;
     display: flex;
     align-items: center;
-    padding: .5rem;
+    padding: 0.5rem;
     padding-left: 0;
     opacity: 0;
   }
 
   & .comment p {
-    padding-top: .3rem;
+    padding-top: 0.3rem;
     margin-bottom: 0;
   }
 
@@ -426,16 +426,16 @@ progress::-moz-progress-bar {
   }
 
   & .comment::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     z-index: -1;
-    top: .5rem;
+    top: 0.5rem;
     left: 0;
     width: 100%;
     height: calc(100% - 1rem);
     background-color: var(--backgroundColor);
-    opacity: .6;
+    opacity: 0.6;
     border-top-right-radius: 1.2rem;
     border-top-left-radius: 1.2rem;
   }
@@ -447,7 +447,7 @@ progress::-moz-progress-bar {
     height: 2.4rem;
     overflow: hidden;
     background-color: blue;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   & .commentImg img {
@@ -457,7 +457,6 @@ progress::-moz-progress-bar {
 }
 
 @keyframes showComment {
-
   0% {
     opacity: 0;
   }
@@ -484,10 +483,10 @@ progress::-moz-progress-bar {
   align-items: center;
   width: 100%;
 
-  transition: all .3s;
+  transition: all 0.3s;
 
   &::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     z-index: -1;
@@ -498,7 +497,7 @@ progress::-moz-progress-bar {
     border-top-left-radius: 1.9rem;
     border-top-right-radius: 1.9rem;
     background-color: var(--backgroundColor);
-    opacity: .6;
+    opacity: 0.6;
   }
 
   & .commentImg {
@@ -518,21 +517,21 @@ progress::-moz-progress-bar {
     }
   }
 
-  & input[type=text] {
-    margin: 0 .5rem;
+  & input[type="text"] {
+    margin: 0 0.5rem;
     padding: 1rem 0;
     background-color: transparent;
     font-size: 1.4rem;
   }
 
-  & input[type=submit] {
+  & input[type="submit"] {
     padding: 0;
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
     color: transparent;
     background-color: blue;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
     cursor: pointer;
   }
 }
@@ -605,14 +604,14 @@ progress::-moz-progress-bar {
   & header {
     display: flex;
     align-items: center;
-    padding: .5rem;
+    padding: 0.5rem;
 
     & h3 {
       font-weight: normal;
       font-size: 2rem;
       order: 1;
       flex: 2;
-      margin-left: .5rem;
+      margin-left: 0.5rem;
     }
   }
 
@@ -620,7 +619,7 @@ progress::-moz-progress-bar {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: .5rem;
+    padding: 0.5rem;
     height: 5rem;
 
     & .contributors {
@@ -634,15 +633,15 @@ progress::-moz-progress-bar {
   display: flex;
 
   & li {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
 
   & li::before {
-    content: '';
+    content: "";
     display: inline-block;
     width: 1.7rem;
     height: 1.5rem;
-    margin-right: .2rem;
+    margin-right: 0.2rem;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
@@ -663,7 +662,7 @@ progress::-moz-progress-bar {
 
 .sorter {
   display: flex;
-  border-bottom: solid .5rem var(--backgroundColorDark);
+  border-bottom: solid 0.5rem var(--backgroundColorDark);
   margin: 0 1rem 1rem;
 
   & li {
@@ -674,7 +673,7 @@ progress::-moz-progress-bar {
   }
 
   & li button {
-    padding: .5rem;
+    padding: 0.5rem;
     font-size: 1.4rem;
     font-weight: lighter;
   }
@@ -689,13 +688,13 @@ progress::-moz-progress-bar {
   }
 
   & .activeSort::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     left: 0;
-    bottom: -.5rem;
+    bottom: -0.5rem;
     width: 100%;
-    height: .5rem;
+    height: 0.5rem;
     background-color: var(--activeColor);
   }
 }
@@ -707,7 +706,7 @@ progress::-moz-progress-bar {
 
   &::before,
   &::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     left: 0;
@@ -761,7 +760,7 @@ progress::-moz-progress-bar {
 .openFilterBtn {
   display: flex;
   flex-direction: column;
-  padding: .5rem;
+  padding: 0.5rem;
   align-items: center;
   background-color: var(--activeColor);
   border-top-right-radius: var(--borderRadius);
@@ -770,7 +769,7 @@ progress::-moz-progress-bar {
   color: var(--activeTextColor);
 
   &::before {
-    content: '';
+    content: "";
     display: block;
     height: 2rem;
     width: 2rem;
@@ -809,7 +808,7 @@ progress::-moz-progress-bar {
   margin: 2rem 0 1rem;
 
   & .projectDetailTitle {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
 
   & header {
@@ -843,7 +842,6 @@ progress::-moz-progress-bar {
 }
 
 .protoTypes {
-
   & .prototypeFase:nth-of-type(2n + 1),
   & .prototypeFase:first-of-type {
     position: relative;
@@ -856,7 +854,7 @@ progress::-moz-progress-bar {
 
     &::before,
     &::after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       left: 0;
@@ -917,7 +915,7 @@ progress::-moz-progress-bar {
     font-size: var(--titlesize);
     font-weight: 400;
     order: 1;
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
 
   & .cardVideoHolder {
@@ -926,7 +924,7 @@ progress::-moz-progress-bar {
 
   & .difficulty {
     display: flex;
-    margin: .5rem .5rem 1rem;
+    margin: 0.5rem 0.5rem 1rem;
 
     & p {
       font-weight: 300;
@@ -939,11 +937,11 @@ progress::-moz-progress-bar {
     & ul li {
       width: var(--broodtekst);
       height: var(--broodtekst);
-      border: solid .05rem var(--secondColorBg);
+      border: solid 0.05rem var(--secondColorBg);
       border-radius: 50%;
       overflow: hidden;
       color: transparent;
-      margin-left: .5rem;
+      margin-left: 0.5rem;
     }
   }
 }
@@ -1003,7 +1001,7 @@ progress::-moz-progress-bar {
 
   & .textInfo {
     flex: 2;
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
 
   & p:first-of-type {
@@ -1201,7 +1199,7 @@ progress::-moz-progress-bar {
     left: 50%;
     transform: translateX(-50%);
     color: var(--activeTextColor);
-    text-shadow: .1rem .1rem rgba(0, 0, 0, .5);
+    text-shadow: 0.1rem 0.1rem rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -1228,7 +1226,7 @@ progress::-moz-progress-bar {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(255, 255, 255, 0.8);
 
   & header {
     font-size: 4rem;
@@ -1281,7 +1279,7 @@ progress::-moz-progress-bar {
     display: block;
     height: 4rem;
     width: 4rem;
-    margin-right: .2rem;
+    margin-right: 0.2rem;
     border-radius: 50%;
     color: transparent;
     background-color: var(--activeColor);
@@ -1349,7 +1347,7 @@ progress::-moz-progress-bar {
   }
 
   & span::before {
-    content: '';
+    content: "";
     display: block;
     height: 5rem;
     width: 5rem;
@@ -1360,7 +1358,7 @@ progress::-moz-progress-bar {
     background-position: center center;
     background-color: var(--activeColor);
     border-radius: 50%;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 }
 
@@ -1407,11 +1405,11 @@ progress::-moz-progress-bar {
 
   & .selectedBox,
   & .selectedType {
-    content: '';
+    content: "";
     display: block;
     width: 6rem;
     height: 6rem;
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
     background-color: #dad8df;
     border-radius: 50%;
     background-repeat: no-repeat;
@@ -1545,12 +1543,12 @@ progress::-moz-progress-bar {
   margin-bottom: 2rem;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
-    bottom: -.3rem;
+    bottom: -0.3rem;
     display: block;
     width: 100%;
-    height: .3rem;
+    height: 0.3rem;
     background-color: var(--activeColor);
   }
 }
@@ -1592,7 +1590,7 @@ legend {
   border-radius: 50%;
 
   &::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     bottom: 0;
@@ -1665,11 +1663,11 @@ legend {
   }
 
   & .activeStep::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
-    top: -.1rem;
-    left: -.1rem;
+    top: -0.1rem;
+    left: -0.1rem;
     width: 1.2rem;
     height: 1.2rem;
     background-color: var(--activeColor);
@@ -1709,11 +1707,11 @@ legend {
     background-repeat: no-repeat;
   }
 
-  & input[type='checkbox'] {
+  & input[type="checkbox"] {
     opacity: 0;
   }
 
-  & input[type='checkbox']:checked ~ .leeftijdCheckbox {
+  & input[type="checkbox"]:checked ~ .leeftijdCheckbox {
     background-color: var(--activeColor);
   }
 }
@@ -1910,7 +1908,7 @@ legend {
       }
 
       & header::after {
-        content: '';
+        content: "";
         display: block;
         width: 13rem;
         height: 18rem;
@@ -1929,7 +1927,6 @@ legend {
   /* REGISTRATION */
 
   .mainRegisterHolder {
-
     & legend {
       margin-top: 0;
     }
@@ -1952,7 +1949,6 @@ legend {
   }
 
   .userSelector {
-
     & .formContentHolder {
       width: auto;
     }
@@ -2091,7 +2087,6 @@ legend {
   }
 
   .prototypeViewer {
-
     & .makerInfo,
     & .prototypeDescription {
       width: 44rem;
@@ -2124,7 +2119,6 @@ legend {
 /* DESKTOP */
 
 @media (--lg) {
-
   h2 {
     font-size: 3.5rem;
   }
@@ -2132,7 +2126,6 @@ legend {
   /* HOME */
 
   .videoPlayerInfo {
-
     & header {
       margin-bottom: 3rem;
     }
@@ -2152,7 +2145,7 @@ legend {
     justify-content: flex-end;
     max-width: 110rem;
     margin: 5rem auto 4rem;
-    padding: 0;
+    padding: 0 2rem;
 
     & header {
       position: absolute;
@@ -2167,12 +2160,13 @@ legend {
     }
   }
 
-  .cardHolder,
+  .cardHolderBtns,
   .sorter {
     max-width: 110rem;
   }
 
   .sorter {
+    max-width: 106rem;
     margin-left: auto;
     margin-right: auto;
   }
