--- a/src/style.css
+++ b/src/style.css
@@ -292,7 +292,7 @@ footer {
 }
 
 .colorBgTop::before {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: -4.9rem;
@@ -782,21 +782,21 @@ progress::-moz-progress-bar {
 
   &::before,
   &::after {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     left: 0;
     width: 100%;
     height: 5rem;
     background-image: url(./assets/img/tileableWave.svg);
-    background-size: auto 100%;
+    background-size: auto 400%;
 
     background-repeat: repeat-x;
   }
 
   &::before {
     top: -4.9rem;
-    background-position: center bottom;
+    background-position: center top;
   }
 
   &::after {
@@ -934,21 +934,21 @@ progress::-moz-progress-bar {
 
     &::before,
     &::after {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       left: 0;
       width: 100%;
       height: 5rem;
       background-image: url(./assets/img/tileableWave.svg);
-      background-size: auto 100%;
+      background-size: auto 400%;
 
       background-repeat: repeat-x;
     }
 
     &::before {
       top: -4.9rem;
-      background-position: center bottom;
+      background-position: center top;
     }
 
     &::after {
